--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Car recomendation</title>
+  <title>Car recomendation1</title>
 </head>
 
 <body>
   <div class="contents_box">
-    <div class="index">Check Your Salary !</div>
+    <div class="index">Check Your Salary, For Your Car!</div>
+    <div class="subIndex">code by. sangjuntechs</div>
     <div class="salary_box"><input id="salary" type="number" />만 원</div>
     <button id="btn" onclick="getSalary(),getCars()">Check</button>
   </div>
@@ -33,9 +34,11 @@
         <div class="price"></div>
         </div>
       </div>
+      <div class="tip"></div>
+      <div class="errtip"></div>
     </div>
   </div>
-
+  <footer>https://github.com/sangjuntechs</footer>
   <script src="getSalary.js"></script>
   <script src="getCar.js"></script>
 </body>
